@@ -274,6 +274,7 @@ GPGME_1.0 {
     gpgme_op_setownertrust_start;
 
     gpgme_op_random_bytes;
+    gpgme_op_random_value;
 
   local:
     *;
