@@ -1,8 +1,11 @@
 Noteworthy changes in version 2.0.0 (unreleased)
 ------------------------------------------------
 
- * New function gpgme_op_random_bytes to get cryptographically strng
-   random bytes from gpg.
+ * New function gpgme_op_random_bytes to get cryptographically
+   strong random bytes from gpg.  [T6694]
+
+ * New function gpgme_op_random_value to get a cryptographically
+   strong unsigned integer random value.   [T6694]
 
  * Removed the gpgme_attr_t enums and their functions which were
    deprecated since 2003.  [rMd54d6eaa64]
@@ -16,6 +19,7 @@ Noteworthy changes in version 2.0.0 (unreleased)
  * Interface changes relative to the 1.24 branch:
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  gpgme_op_random_bytes                   NEW.
+ gpgme_op_random_value                   NEW.
  GPGME_RANDOM_MODE_NORMAL                NEW.
  GPGME_RANDOM_MODE_ZBASE32               NEW.
  gpgme_attr_t                            REMOVED.
